--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -170,3 +170,12 @@ Esse trabalho tem como objetivo estudar o *fenômeno da financeirização* para 
 - Levantamento bibliográfico sobre separação entre propriedade e gerência (Felipe)
    - Foco menor na financeirização
 - Isso é importante na adequação dos dados, menos urgente mas pode ter mais literatura
+
+* Reunião <2020-10-14 qua 19:00>
+
+*** Dados secundários
+- Sarti e Laplane: Dados sobre Brasil
+
+*** TODO Correlação de Spearmean mínimo de observações
+
+*** TODO Passar texto Arena
